# tigercache

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: storage_comparison.rs
examples/: dataset_test.rs  hybrid_storage.rs  simple_search.rs
src/: config.rs  document.rs  error.rs  index.rs  intern.rs  lib.rs  persistence.rs  search.rs  tiger_cache.rs  trigram.rs
src/cache/: document_cache.rs  index_cache.rs  lru_cache.rs  memory_manager.rs  mod.rs  query_cache.rs
src/storage/: config.rs  error.rs  mod.rs  page.rs  redb_engine.rs  rocksdb_engine.rs  sled_engine.rs  sqlite_engine.rs  storage_engine.rs
tests/: integration_tests.rs
