[package]
name = "tiger_cache"
version = "0.1.0"
edition = "2024"
description = "An embedded fuzzy search library"
authors = ["Cosmic Tiger"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
thiserror = "2.0"
levenshtein = "1.0"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
