[package]
name = "tiger_cache"
version = "0.1.0"
edition = "2021"
description = "An embedded fuzzy search library"
authors = ["Cosmic Tiger"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
thiserror = "2.0"
levenshtein = "1.0"
rayon = "1.8"
rustc-hash = "2.0"
smallvec = { version = "1.11", features = ["serde"] }
lru = "0.12"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo = "0.31"
